update dependeies