@@ -57,7 +57,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.12.2</version>
+      <version>6.1.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -69,7 +69,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>5.18.0</version>
+      <version>5.23.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -79,11 +79,11 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
-        <version>2.18.0</version>
+        <version>2.21.0</version>
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.14.1</version>
+        <version>3.15.0</version>
         <configuration>
           <release>25</release>
           <enablePreview>true</enablePreview>
@@ -97,15 +97,16 @@
            <dependency>
               <groupId>me.fabriciorby</groupId>
               <artifactId>maven-surefire-junit5-tree-reporter</artifactId>
-              <version>1.4.0</version>
+              <version>1.5.1</version>
            </dependency>
          </dependencies>
          <configuration>
+            <argLine>${argLine} --enable-preview</argLine>
             <reportFormat>plain</reportFormat>
             <consoleOutputReporter>
                <disable>true</disable>
             </consoleOutputReporter>
-            <statelessTestsetInfoReporter  implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporterUnicode"/>
+            <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter"/>
          </configuration>
       </plugin>
       <plugin>
@@ -130,7 +131,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>3.3.1</version>
+        <version>3.4.0</version>
         <executions>
           <execution>
             <id>attach-sources</id>
